<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eID"
        android:textSize="20sp"
        android:hint="@string/id"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eName"
        android:textSize="20sp"
        android:hint="@string/name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eTelefono"
        android:inputType="number"
        android:textSize="20sp"
        android:hint="@string/telefono"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eNomlib"
        android:textSize="20sp"
        android:hint="@string/nombrelib"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eAutor"
        android:inputType="text"
        android:textSize="20sp"
        android:hint="@string/autor"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:onClick="onClick"
        android:id="@+id/bRegistrar"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read"
        android:onClick="onClick"
        android:id="@+id/bBuscar"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:onClick="onClick"
        android:id="@+id/bModificar"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:onClick="onClick"
        android:id="@+id/bEliminar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="*Para realizar búsquedas, digite el número de teléfono."/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="*Para registrar un préstamo, digite el ID del libro."/>
</LinearLayout>
